@@ -454,7 +454,7 @@ The PDF tab (Figure 7-8) contains settings specific to PDF output.
 <H3>PDF Version</H3>
 
 The <VAR>PDF Version</VAR> radio buttons control what version of PDF is
-generated. PDF 1.3 is the most commonly supported version. Click on the
+generated. PDF 1.4 is the most commonly supported version. Click on the
 corresponding radio button to set the version.
 
 <H3>Page Mode</H3>
