@@ -53,11 +53,11 @@ can be one of the following:</P>
 <TR><TD>html</TD><TD>Generate one or more indexed HTML files.</TD></TR>
 <TR><TD>htmlsep</TD><TD>Generate separate HTML files for each heading in
 the table-of-contents.</TD></TR>
-<TR><TD>pdf</TD><TD>Generate a PDF file (default version - 1.3).</TD></TR>
-<TR><TD>pdf11</TD><TD>Generate a PDF 1.1 file for Acrobat Reader 2.0.</TD></TR>
-<TR><TD>pdf12</TD><TD>Generate a PDF 1.2 file for Acrobat Reader 3.0.</TD></TR>
-<TR><TD>pdf13</TD><TD>Generate a PDF 1.3 file for Acrobat Reader 4.0.</TD></TR>
-<TR><TD>pdf14</TD><TD>Generate a PDF 1.4 file for Acrobat Reader 5.0.</TD></TR>
+<TR><TD>pdf</TD><TD>Generate a PDF file (default version - 1.4).</TD></TR>
+<TR><TD>pdf11</TD><TD>Generate a PDF 1.1 file for Acrobat Reader 2.0 and later.</TD></TR>
+<TR><TD>pdf12</TD><TD>Generate a PDF 1.2 file for Acrobat Reader 3.0 and later.</TD></TR>
+<TR><TD>pdf13</TD><TD>Generate a PDF 1.3 file for Acrobat Reader 4.0 and later.</TD></TR>
+<TR><TD>pdf14</TD><TD>Generate a PDF 1.4 file for Acrobat Reader 5.0 and later.</TD></TR>
 <TR><TD>ps</TD><TD>Generate one or more PostScript files (default level - 2).</TD></TR>
 <TR><TD>ps1</TD><TD>Generate one or more Level 1 PostScript files.</TD></TR>
 <TR><TD>ps2</TD><TD>Generate one or more Level 2 PostScript files.</TD></TR>
@@ -312,11 +312,11 @@ can be one of the following:</P>
 <TR><TD>html</TD><TD>Generate one or more indexed HTML files.</TD></TR>
 <TR><TD>htmlsep</TD><TD>Generate separate HTML files for each heading in
 the table-of-contents.</TD></TR>
-<TR><TD>pdf</TD><TD>Generate a PDF file (default version - 1.3).</TD></TR>
-<TR><TD>pdf11</TD><TD>Generate a PDF 1.1 file for Acrobat Reader 2.0.</TD></TR>
-<TR><TD>pdf12</TD><TD>Generate a PDF 1.2 file for Acrobat Reader 3.0.</TD></TR>
-<TR><TD>pdf13</TD><TD>Generate a PDF 1.3 file for Acrobat Reader 4.0.</TD></TR>
-<TR><TD>pdf14</TD><TD>Generate a PDF 1.4 file for Acrobat Reader 5.0.</TD></TR>
+<TR><TD>pdf</TD><TD>Generate a PDF file (default version - 1.4).</TD></TR>
+<TR><TD>pdf11</TD><TD>Generate a PDF 1.1 file for Acrobat Reader 2.0 and later.</TD></TR>
+<TR><TD>pdf12</TD><TD>Generate a PDF 1.2 file for Acrobat Reader 3.0 and later.</TD></TR>
+<TR><TD>pdf13</TD><TD>Generate a PDF 1.3 file for Acrobat Reader 4.0 and later.</TD></TR>
+<TR><TD>pdf14</TD><TD>Generate a PDF 1.4 file for Acrobat Reader 5.0 and later.</TD></TR>
 <TR><TD>ps</TD><TD>Generate one or more PostScript files (default level - 2).</TD></TR>
 <TR><TD>ps1</TD><TD>Generate one or more Level 1 PostScript files.</TD></TR>
 <TR><TD>ps2</TD><TD>Generate one or more Level 2 PostScript files.</TD></TR>
