@@ -472,7 +472,7 @@ The PDF tab contains settings specific to PDF output.
 <H2>PDF Version</H2>
 
 The <VAR>PDF Version</VAR> radio buttons control what version of PDF is
-generated. PDF 1.3 is the most commonly supported version. Click on the
+generated. PDF 1.4 is the most commonly supported version. Click on the
 corresponding radio button to set the version.
 
 <H2>Page Mode</H2>
